1.21.10 Update (a day before 1.21.11 drops LMAO)